# Nearest_Shape

./: CMakeLists.txt  LineSegment.cpp  LineSegment.h  Management.cpp  Management.h  Point.h  README.md  Tool.cpp  Triangle.cpp  Triangle.h  main.cpp
LineSegment/: LineSegementManagement.cpp  LineSegementManagement.h  LineSegment.cpp  LineSegment.h
Management/: Management.cpp  Management.h
Point/: Point.cpp  Point.h  PointManagement.cpp  PointManagement.h
Tool/: Tool.cpp  Tool.h
Triangle/: Triangle.cpp  Triangle.h  TriangleManagement.cpp  TriangleManagement.h
